--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </ul>
             </nav> <!-- end s-header__nav-wrap -->
 
-            <a href="mailto:#0" class="btn btn--primary btn--small">
+            <a href="#email" class="btn btn--primary btn--small">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M24 0l-6 22-8.129-7.239 7.802-8.234-10.458 7.227-7.215-1.754 24-12zm-15 16.668v7.332l3.258-4.431-3.258-2.901z"/></svg>
                 Get In Touch
             </a>
@@ -100,12 +100,7 @@
             </div>
         </div>
 
-        <div class="s-hero__video">
-            <a class="s-hero__video-link" href="https://player.vimeo.com/video/117310401?color=01aef0&amp;title=0&amp;byline=0&amp;portrait=0" data-lity="">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M21 12l-18 12v-24z"/></svg>
-                <span class="s-hero__video-text">Play Video</span>
-            </a>
-        </div>
+    
 
         <div class="s-hero__scroll">
             <a href="#about" class="s-hero__scroll-link smoothscroll">
@@ -542,7 +537,7 @@
 
     <!-- contact
     ================================================== -->
-    <section class="s-contact">
+    <section class="s-contact" id="email">
 
         <div class="row narrower s-contact__top h-text-center">
             <div class="column">
@@ -554,7 +549,7 @@
         <div class="row h-text-center">
             <div class="column">
                 <p class="s-contact__email">
-                    <a href="mailto:#0">0824824@naver.com</a>
+                    <a>0824824@naver.com</a>
                 </p>
             </div>
         </div>
